Bug 249191 - RSS code in IGB driver is never compiled.
Summary: RSS code in IGB driver is never compiled.
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 12.1-RELEASE
Hardware: amd64 Any
: --- Affects Only Me
Assignee: Eric Joyner
URL:
Keywords: IntelNetworking
Depends on:
Blocks:
 
Reported: 2020-09-08 11:36 UTC by Miłosz Kaniewski
Modified: 2020-09-25 22:12 UTC (History)
3 users (show)

See Also:
koobs: mfc-stable12+
koobs: mfc-stable11-


Attachments
Proposed patch (539 bytes, patch)
2020-09-08 11:36 UTC, Miłosz Kaniewski
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Miłosz Kaniewski 2020-09-08 11:36:21 UTC
Created attachment 217819 [details]
Proposed patch

Hi,

after an upgrade from 11-STABLE to 12.1-RELEASE the RSS on my IGB NICs stopped to work properly. After investigation I found out that macro "RSS" is not defined when sys/dev/e1000/if_em.c is compiled even if "option RSS" is placed in the kernel config file.

Please see the proposed fix in the attachment.
Comment 1 commit-hook freebsd_committer freebsd_triage 2020-09-15 21:00:58 UTC
A commit references this bug:

Author: erj
Date: Tue Sep 15 21:00:26 UTC 2020
New revision: 365774
URL: https://svnweb.freebsd.org/changeset/base/365774

Log:
  igb(4): Fix define and includes with RSS option enabled

  This re-adds the opt_rss.h header to the driver and includes some
  RSS-specific headers when RSS is defined.

  PR:		249191
  Submitted by:	Milosz Kaniewski <milosz.kaniewski@gmail.com>
  MFC after:	3 days

Changes:
  head/sys/dev/e1000/if_em.h
Comment 2 commit-hook freebsd_committer freebsd_triage 2020-09-21 22:53:44 UTC
A commit references this bug:

Author: erj
Date: Mon Sep 21 22:52:58 UTC 2020
New revision: 365983
URL: https://svnweb.freebsd.org/changeset/base/365983

Log:
  MFC r365774 and r365776

  These two commits fix issues in em(4)/igb(4):
  - Fix define and includes with RSS option enabled
  - Properly retain promisc flag in init

  PR:		249191, 248869
  MFC after:	1 day

Changes:
_U  stable/12/
  stable/12/sys/dev/e1000/if_em.c
  stable/12/sys/dev/e1000/if_em.h
Comment 3 commit-hook freebsd_committer freebsd_triage 2020-09-23 23:57:03 UTC
A commit references this bug:

Author: erj
Date: Wed Sep 23 23:56:50 UTC 2020
New revision: 366097
URL: https://svnweb.freebsd.org/changeset/base/366097

Log:
  MFS r365983

  Contains fixes for issues in em(4)/igb(4):
  - Fix define and includes with RSS option enabled
  - Properly retain promisc flag in init

  PR:		249191, 248869
  Approved by:	re (gjb@)

Changes:
_U  releng/12.2/
  releng/12.2/sys/dev/e1000/if_em.c
  releng/12.2/sys/dev/e1000/if_em.h
Comment 4 Eric Joyner freebsd_committer freebsd_triage 2020-09-25 22:12:25 UTC
Thanks for the patch, Milosz.