MFC r365774 and r365776

These two commits fix issues in em(4)/igb(4):
- Fix define and includes with RSS option enabled
- Properly retain promisc flag in init

PR:		249191, 248869
MFC after:	1 day